--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -518,6 +518,9 @@ video {
 .right-2 {
   right: 0.5rem;
 }
+.top-0 {
+  top: 0px;
+}
 .top-\[1\.55rem\] {
   top: 1.55rem;
 }
@@ -717,6 +720,9 @@ video {
 .w-\[20rem\] {
   width: 20rem;
 }
+.w-\[40rem\] {
+  width: 40rem;
+}
 .w-full {
   width: 100%;
 }
@@ -789,6 +795,9 @@ video {
 .gap-40 {
   gap: 10rem;
 }
+.gap-5 {
+  gap: 1.25rem;
+}
 .gap-56 {
   gap: 14rem;
 }
@@ -817,6 +826,9 @@ video {
 .rounded-bl-3xl {
   border-bottom-left-radius: 1.5rem;
 }
+.rounded-br {
+  border-bottom-right-radius: 0.25rem;
+}
 .rounded-br-3xl {
   border-bottom-right-radius: 1.5rem;
 }
@@ -825,6 +837,9 @@ video {
 }
 .rounded-tl-lg {
   border-top-left-radius: 0.5rem;
+}
+.rounded-tr {
+  border-top-right-radius: 0.25rem;
 }
 .rounded-tr-3xl {
   border-top-right-radius: 1.5rem;
@@ -907,6 +922,10 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 .pb-10 {
   padding-bottom: 2.5rem;
